src/tests/routes/crates/snapshots/integration__routes__crates__read__new_name-2.snap
---
source: src/tests/routes/crates/read.rs
expression: response.json()
---
{
  "categories": null,
  "crate": {
    "badges": [],
    "categories": null,
    "created_at": "[datetime]",
    "default_version": "0.99.0",
    "description": null,
    "documentation": null,
    "downloads": 0,
    "exact_match": false,
    "homepage": null,
    "id": "new",
    "keywords": null,
    "links": {
      "owner_team": "/api/v1/crates/new/owner_team",
      "owner_user": "/api/v1/crates/new/owner_user",
      "owners": "/api/v1/crates/new/owners",
      "reverse_dependencies": "/api/v1/crates/new/reverse_dependencies",
      "version_downloads": "/api/v1/crates/new/downloads",
      "versions": "/api/v1/crates/new/versions"
    },
    "max_stable_version": null,
    "max_version": "0.0.0",
    "name": "new",
    "newest_version": "0.0.0",
    "num_versions": 1,
    "recent_downloads": null,
    "repository": null,
    "trustpub_only": false,
    "updated_at": "[datetime]",
    "versions": null,
    "yanked": false
  },
  "keywords": null,
  "versions": null
}
